text alignment fix

--- a/client/src/styles/BuildingStatsTable.scss
+++ b/client/src/styles/BuildingStatsTable.scss
@@ -13,6 +13,7 @@ table {
     border-left: 1px solid $gray-dark;
     background: #e0e5e9;
     padding: 8px 12px;
+    text-align: left;
     button {
       display: flex;
     }
